# st-android

./: README.md  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/st/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/st/demo/: ExampleUnitTest.java
bmf/: build.gradle
bmf/src/androidTest/java/com/bankcomm/bmf/: SM2Test.java  SM3Test.java  SM4Test.java
bmf/src/main/java/com/bankcomm/bmf/: BMFConstans.java  BMFResult.java
bmf/src/main/jni/: CMakeLists.txt
bmf/src/main/jni/security/: bmf_security.c  bmf_security.h
bmf/src/test/java/com/bankcomm/bmf/: CommonDataTest.java  MixedModelTest.java
gradle/wrapper/: gradle-wrapper.properties
stsdk/src/androidTest/java/com/bankcomm/bmf/: ExampleInstrumentedTest.java  SM2Test.java  SM3Test.java  SM4Test.java
stsdk/src/androidTest/java/com/st/: ExampleInstrumentedTest.java  SM2Test.java  SM3Test.java  SM4Test.java
stsdk/src/main/: AndroidManifest.xml
stsdk/src/main/java/com/st/: BMFConstans.java  BMFResult.java
stsdk/src/main/java/com/st/data/: CommonData.java  CommonDataEntry.java
stsdk/src/main/java/com/st/security/: HMac.java  HMacAdapter.java  (+6 more)
stsdk/src/main/jni/: CMakeLists.txt  README
stsdk/src/main/jni/security/: security.c  security.h
stsdk/src/test/java/com/st/: CommonDataTest.java  MixedModelTest.java
(+32 files in other folders)
